--- a/app/globals.css
+++ b/app/globals.css
@@ -15,8 +15,12 @@
 }
 
 body {
-  margin: 100px 300px;
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
