--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=League+Script&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 :root {
   --background: #ffffff;
@@ -15,12 +16,12 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+
+  font-family: ;
   height: 100%;
   margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: "League Script", cursive;
 }
